--- a/_posts/2782485-HM/2017-02-04-EnergyPlus-ee235581eff6b806959713ddc34f9b7b02a8e20d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/2782485-HM/2017-02-04-EnergyPlus-ee235581eff6b806959713ddc34f9b7b02a8e20d-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-ee235581eff6b806959713ddc34f9b7b02a8e20d-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-ee235581eff6b806959713ddc34f9b7b02a8e20d-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-02-04 04:58:57'
+date: '2017-02-04 04:59:50'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 4
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.120131042
+test_time: 1.009222506
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -57,7 +57,34 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "src/EnergyPlus/HybridModel.cc",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "[license-check] License text cannot be matched, check entire license"
+    },
+    {
+      "filename": "src/EnergyPlus/HybridModel.hh",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "[license-check] License text cannot be matched, check entire license"
+    },
+    {
+      "filename": "tst/EnergyPlus/unit/HybridModel.unit.cc",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "[license-check] License year is incorrect"
+    },
+    {
+      "filename": "tst/EnergyPlus/unit/HybridModel.unit.cc",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "[license-check] Non-year differences in license text, check entire license"
+    }
   ],
   "test_results": [
 
@@ -71,9 +98,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-ee235581eff6b806959713ddc34f9b7b02a8e20d-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-04 04:58:57",
+    "date": "2017-02-04 04:59:50",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 4,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -97,10 +124,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.120131042,
+    "test_time": 1.009222506,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
