--- a/_posts/kiva/2017-02-07-EnergyPlus-d8bce79843f1ab9344d96c477fac6890a8712e16-x86_64-MacOS-10.9-clang-results.html
+++ b/_posts/kiva/2017-02-07-EnergyPlus-d8bce79843f1ab9344d96c477fac6890a8712e16-x86_64-MacOS-10.9-clang-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-d8bce79843f1ab9344d96c477fac6890a8712e16-x86_64-MacOS-10.9-cla
 permalink: EnergyPlus-d8bce79843f1ab9344d96c477fac6890a8712e16-x86_64-MacOS-10.9-clang.html
 tags: data
 layout: ci_results
-date: '2017-02-07 05:19:06'
+date: '2017-02-07 05:21:55'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 1
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -24,15 +24,15 @@ package_name:
 tag_name: 
 commit_sha: d8bce79843f1ab9344d96c477fac6890a8712e16
 branch_name: kiva
-test_run: false
+test_run: true
 pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.9-clang
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 30.185217
+test_time: 2.066274
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,13 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "third_party/kiva/src/libkiva/CMakeLists.txt",
+      "linenumber": "115",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "  Unknown CMake command \"add_coverage\"."
+    }
   ],
   "test_results": [
 
@@ -69,9 +75,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-d8bce79843f1ab9344d96c477fac6890a8712e16-x86_64-MacOS-10.9-clang.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-07 05:19:06",
+    "date": "2017-02-07 05:21:55",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 1,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -90,15 +96,15 @@ performance_test_count: 0
     "tag_name": null,
     "commit_sha": "d8bce79843f1ab9344d96c477fac6890a8712e16",
     "branch_name": "kiva",
-    "test_run": false,
+    "test_run": true,
     "pull_request_issue_id": "",
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.9-clang",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 30.185217,
+    "test_time": 2.066274,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
