--- a/_posts/FEIOTDKE/2017-02-08-EnergyPlus-3247799ff8eec269daeb9b26cea6a09c3743f0b3-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/FEIOTDKE/2017-02-08-EnergyPlus-3247799ff8eec269daeb9b26cea6a09c3743f0b3-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-3247799ff8eec269daeb9b26cea6a09c3743f0b3-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-3247799ff8eec269daeb9b26cea6a09c3743f0b3-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-02-08 14:56:31'
+date: '2017-02-08 14:57:33'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.071923904
+test_time: 1.01304733
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-3247799ff8eec269daeb9b26cea6a09c3743f0b3-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-08 14:56:31",
+    "date": "2017-02-08 14:57:33",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.071923904,
+    "test_time": 1.01304733,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
