--- a/_posts/FEIOTDKE/2017-02-10-EnergyPlus-8098f869588f22486b0347883c3f08d3257d8a73-x86_64-MacOS-10.9-clang-results.html
+++ b/_posts/FEIOTDKE/2017-02-10-EnergyPlus-8098f869588f22486b0347883c3f08d3257d8a73-x86_64-MacOS-10.9-clang-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-8098f869588f22486b0347883c3f08d3257d8a73-x86_64-MacOS-10.9-cla
 permalink: EnergyPlus-8098f869588f22486b0347883c3f08d3257d8a73-x86_64-MacOS-10.9-clang.html
 tags: data
 layout: ci_results
-date: '2017-02-10 02:07:12'
+date: '2017-02-10 02:33:07'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -24,15 +24,15 @@ package_name:
 tag_name: 
 commit_sha: 8098f869588f22486b0347883c3f08d3257d8a73
 branch_name: FixEIOTableDiffKeyError
-test_run: false
+test_run: true
 pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.9-clang
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 6.0e-06
+test_time: 2.014974
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8098f869588f22486b0347883c3f08d3257d8a73-x86_64-MacOS-10.9-clang.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-10 02:07:12",
+    "date": "2017-02-10 02:33:07",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -90,15 +90,15 @@ performance_test_count: 0
     "tag_name": null,
     "commit_sha": "8098f869588f22486b0347883c3f08d3257d8a73",
     "branch_name": "FixEIOTableDiffKeyError",
-    "test_run": false,
+    "test_run": true,
     "pull_request_issue_id": "",
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.9-clang",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 6.0e-06,
+    "test_time": 2.014974,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
